// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/ImageCropper Basic smoke-test 1`] = `
<div class="p-6 max-w-xl">
  <div class="flex w-full flex-col gap-4">
    <div class="flex w-full flex-col gap-4">
      <div class="flex flex-col gap-4">
        <div class="relative flex w-full cursor-move touch-none items-center justify-center overflow-hidden focus:outline-none h-80"
             tabindex="0"
             role="application"
             aria-label="Interactive image cropper"
             aria-describedby="_r_ID_"
             aria-valuemin="1"
             aria-valuemax="3"
             aria-valuenow="1"
             aria-valuetext="Zoom: 100%"
             data-slot="cropper"
        >
          <div id="_r_ID_"
               class="sr-only"
               data-slot="cropper-description"
          >
            Use mouse wheel or pinch gesture to zoom. Drag with mouse or touch, or use arrow keys to pan the image within the crop area.
          </div>
          <div style="width: 405px; height: 270px; transform: translate3d(0px, 0px, 0px) scale(1); position: absolute; left: calc(50% - 202.5px); top: calc(50% - 135px); will-change: transform;">
            <img alt="Image being cropped"
                 draggable="false"
                 aria-hidden="true"
                 class="pointer-events-none h-full w-full object-cover"
                 data-slot="cropper-image"
                 src="https://picsum.photos/id/237/600/400"
            >
          </div>
          <div aria-hidden="true"
               class="pointer-events-none absolute border-3 border-white shadow-[0_0_0_9999px_rgba(0,0,0,0.3)] in-[[data-slot=cropper]:focus-visible]:ring-[3px] in-[[data-slot=cropper]:focus-visible]:ring-white/50"
               data-slot="cropper-crop-area"
               style="width: 270px; height: 270px;"
          >
          </div>
        </div>
        <button data-slot="button"
                class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 hover:text-primary-foreground h-9 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 w-full"
        >
          Crop
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/ImageCropper Circular smoke-test 1`] = `
<div class="p-6 max-w-xl">
  <div class="flex w-full flex-col gap-4">
    <div class="flex w-full flex-col gap-4">
      <div class="flex flex-col gap-4">
        <div class="relative flex w-full cursor-move touch-none items-center justify-center overflow-hidden focus:outline-none h-80"
             tabindex="0"
             role="application"
             aria-label="Interactive image cropper"
             aria-describedby="_r_ID_"
             aria-valuemin="1"
             aria-valuemax="3"
             aria-valuenow="1"
             aria-valuetext="Zoom: 100%"
             data-slot="cropper"
        >
          <div id="_r_ID_"
               class="sr-only"
               data-slot="cropper-description"
          >
            Use mouse wheel or pinch gesture to zoom. Drag with mouse or touch, or use arrow keys to pan the image within the crop area.
          </div>
          <div style="width: 405px; height: 270px; transform: translate3d(0px, 0px, 0px) scale(1); position: absolute; left: calc(50% - 202.5px); top: calc(50% - 135px); will-change: transform;">
            <img alt="Image being cropped"
                 draggable="false"
                 aria-hidden="true"
                 class="pointer-events-none h-full w-full object-cover"
                 data-slot="cropper-image"
                 src="https://picsum.photos/id/237/600/400"
            >
          </div>
          <div aria-hidden="true"
               class="pointer-events-none absolute border-3 border-white shadow-[0_0_0_9999px_rgba(0,0,0,0.3)] in-[[data-slot=cropper]:focus-visible]:ring-[3px] in-[[data-slot=cropper]:focus-visible]:ring-white/50 rounded-full"
               data-slot="cropper-crop-area"
               style="width: 270px; height: 270px;"
          >
          </div>
        </div>
        <button data-slot="button"
                class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 hover:text-primary-foreground h-9 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 w-full"
        >
          Crop
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/ImageCropper WithPreview smoke-test 1`] = `
<div class="p-6 max-w-xl">
  <div class="flex w-full flex-col gap-4">
    <div class="flex w-full flex-col gap-4 md:flex-row">
      <div class="flex flex-col gap-4 md:flex-1">
        <div class="relative flex w-full cursor-move touch-none items-center justify-center overflow-hidden focus:outline-none h-80"
             tabindex="0"
             role="application"
             aria-label="Interactive image cropper"
             aria-describedby="_r_ID_"
             aria-valuemin="1"
             aria-valuemax="3"
             aria-valuenow="1"
             aria-valuetext="Zoom: 100%"
             data-slot="cropper"
        >
          <div id="_r_ID_"
               class="sr-only"
               data-slot="cropper-description"
          >
            Use mouse wheel or pinch gesture to zoom. Drag with mouse or touch, or use arrow keys to pan the image within the crop area.
          </div>
          <div style="width: 405px; height: 270px; transform: translate3d(0px, 0px, 0px) scale(1); position: absolute; left: calc(50% - 202.5px); top: calc(50% - 135px); will-change: transform;">
            <img alt="Image being cropped"
                 draggable="false"
                 aria-hidden="true"
                 class="pointer-events-none h-full w-full object-cover"
                 data-slot="cropper-image"
                 src="https://picsum.photos/id/237/600/400"
            >
          </div>
          <div aria-hidden="true"
               class="pointer-events-none absolute border-3 border-white shadow-[0_0_0_9999px_rgba(0,0,0,0.3)] in-[[data-slot=cropper]:focus-visible]:ring-[3px] in-[[data-slot=cropper]:focus-visible]:ring-white/50"
               data-slot="cropper-crop-area"
               style="width: 270px; height: 270px;"
          >
          </div>
        </div>
        <div class="mx-auto flex w-full max-w-80 items-center gap-2">
          <span dir="ltr"
                data-orientation="horizontal"
                aria-disabled="false"
                data-slot="slider"
                class="relative flex w-full touch-none items-center select-none data-disabled:opacity-50 data-[orientation=vertical]:h-full data-[orientation=vertical]:min-h-44 data-[orientation=vertical]:w-auto data-[orientation=vertical]:flex-col"
                aria-label="Zoom slider"
                style="--radix-ID translateX(-50%);"
          >
            <span data-orientation="horizontal"
                  data-slot="slider-track"
                  class="bg-muted relative grow overflow-hidden rounded-full data-[orientation=horizontal]:h-1.5 data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-1.5"
            >
              <span data-orientation="horizontal"
                    data-slot="slider-range"
                    class="bg-primary absolute data-[orientation=horizontal]:h-full data-[orientation=vertical]:w-full"
                    style="left: 0%; right: 100%;"
              >
              </span>
            </span>
            <span style="transform: var(--radix-ID position: absolute; left: calc(0% + 8px);">
              <span role="slider"
                    aria-valuemin="1"
                    aria-valuemax="3"
                    aria-orientation="horizontal"
                    data-orientation="horizontal"
                    tabindex="0"
                    data-slot="slider-thumb"
                    class="border-primary ring-ring/50 block size-4 shrink-0 rounded-full border bg-white shadow-sm transition-[color,box-shadow] hover:ring-4 focus-visible:ring-4 focus-visible:outline-hidden disabled:pointer-events-none disabled:opacity-50"
                    data-radix-id""
                    aria-valuenow="1"
                    style
              >
              </span>
            </span>
          </span>
          <output class="block w-10 shrink-0 text-right text-sm font-medium tabular-nums text-foreground">
            1x
          </output>
        </div>
        <button data-slot="button"
                class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 hover:text-primary-foreground h-9 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 w-full"
        >
          Apply crop
        </button>
      </div>
      <div class="flex w-full flex-col gap-2 md:w-40">
        <div class="relative aspect-square w-full overflow-hidden rounded-lg border border-border bg-muted">
          <div class="flex size-full items-center justify-center p-2 text-center text-xs text-muted-foreground">
            Image preview
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/ImageCropper WithZoom smoke-test 1`] = `
<div class="p-6 max-w-xl">
  <div class="flex w-full flex-col gap-4">
    <div class="flex w-full flex-col gap-4">
      <div class="flex flex-col gap-4">
        <div class="relative flex w-full cursor-move touch-none items-center justify-center overflow-hidden focus:outline-none h-80"
             tabindex="0"
             role="application"
             aria-label="Interactive image cropper"
             aria-describedby="_r_ID_"
             aria-valuemin="1"
             aria-valuemax="3"
             aria-valuenow="1"
             aria-valuetext="Zoom: 100%"
             data-slot="cropper"
        >
          <div id="_r_ID_"
               class="sr-only"
               data-slot="cropper-description"
          >
            Use mouse wheel or pinch gesture to zoom. Drag with mouse or touch, or use arrow keys to pan the image within the crop area.
          </div>
          <div style="width: 405px; height: 270px; transform: translate3d(0px, 0px, 0px) scale(1); position: absolute; left: calc(50% - 202.5px); top: calc(50% - 135px); will-change: transform;">
            <img alt="Image being cropped"
                 draggable="false"
                 aria-hidden="true"
                 class="pointer-events-none h-full w-full object-cover"
                 data-slot="cropper-image"
                 src="https://picsum.photos/id/237/600/400"
            >
          </div>
          <div aria-hidden="true"
               class="pointer-events-none absolute border-3 border-white shadow-[0_0_0_9999px_rgba(0,0,0,0.3)] in-[[data-slot=cropper]:focus-visible]:ring-[3px] in-[[data-slot=cropper]:focus-visible]:ring-white/50"
               data-slot="cropper-crop-area"
               style="width: 270px; height: 270px;"
          >
          </div>
        </div>
        <div class="mx-auto flex w-full max-w-80 items-center gap-2">
          <span dir="ltr"
                data-orientation="horizontal"
                aria-disabled="false"
                data-slot="slider"
                class="relative flex w-full touch-none items-center select-none data-disabled:opacity-50 data-[orientation=vertical]:h-full data-[orientation=vertical]:min-h-44 data-[orientation=vertical]:w-auto data-[orientation=vertical]:flex-col"
                aria-label="Zoom slider"
                style="--radix-ID translateX(-50%);"
          >
            <span data-orientation="horizontal"
                  data-slot="slider-track"
                  class="bg-muted relative grow overflow-hidden rounded-full data-[orientation=horizontal]:h-1.5 data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-1.5"
            >
              <span data-orientation="horizontal"
                    data-slot="slider-range"
                    class="bg-primary absolute data-[orientation=horizontal]:h-full data-[orientation=vertical]:w-full"
                    style="left: 0%; right: 100%;"
              >
              </span>
            </span>
            <span style="transform: var(--radix-ID position: absolute; left: calc(0% + 8px);">
              <span role="slider"
                    aria-valuemin="1"
                    aria-valuemax="3"
                    aria-orientation="horizontal"
                    data-orientation="horizontal"
                    tabindex="0"
                    data-slot="slider-thumb"
                    class="border-primary ring-ring/50 block size-4 shrink-0 rounded-full border bg-white shadow-sm transition-[color,box-shadow] hover:ring-4 focus-visible:ring-4 focus-visible:outline-hidden disabled:pointer-events-none disabled:opacity-50"
                    data-radix-id""
                    aria-valuenow="1"
                    style
              >
              </span>
            </span>
          </span>
          <output class="block w-10 shrink-0 text-right text-sm font-medium tabular-nums text-foreground">
            1x
          </output>
        </div>
        <button data-slot="button"
                class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 hover:text-primary-foreground h-9 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 w-full"
        >
          Crop
        </button>
      </div>
    </div>
  </div>
</div>
`;
